event-section gap neat the navbar fixed

--- a/assets/CSS/eventsyearpage.css
+++ b/assets/CSS/eventsyearpage.css
@@ -201,24 +201,26 @@ p.dateTime-para {
 }
 
 .event-container {
-  /* margin-top: 1rem; */
+  
 
   width: 100%;
-  /*height: 100vh;*/
+
   align-items: center;
   justify-content: center;
   background-color: #eee;
-  /*padding:0 1.5rem;*/
+ 
   display: flex;
   flex-wrap: wrap;
+  margin-top: -5rem;
 }
 
 section {
   width: 100%;
   /* padding: 80px 0; */
 }
-section#content {
-  /* padding: 80px 0 0 0; */
+#content {
+  margin-top: 0px;
+  padding-top: 0px;
 }
 
 .event {
